# lokalize-ai-translator

./: .dockerignore  .gitignore  Practical Test Glossary - Localization Technical Specialist - 20250601 (1).xlsx - glossary.csv  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  README.md  README_API_PARITY.md  REFACTORING_SUMMARY.md  debug_env.py  examples_api_parity.py  main.py  pyproject.toml  test_glossary_translation.py  test_translation_update.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: glossary_processor.py  lokalise.py  translation.py
backend/app/api/v1/endpoints/lokalise/: __init__.py  comments.py  contributors.py  payment_cards.py  projects.py  system.py
backend/app/api/v1/endpoints/lokalise/projects/: __init__.py  comments.py  contributors.py  core.py  files.py  glossary.py  keys.py  languages.py  processes.py  screenshots.py  segments.py  snapshots.py  (+4 more)
backend/app/core/: config.py  logging.py
backend/app/schemas/: glossary_processor.py  glossary_translation.py  translation.py  translation_evaluation.py
backend/app/schemas/lokalise/: __init__.py  comments.py  contributors.py  files.py  glossary.py  keys.py  languages.py  orders.py  payment_cards.py  permission_templates.py  projects.py  queued_processes.py  screenshots.py  segments.py  snapshots.py  tasks.py  team_user_billing_details.py  team_user_groups.py  team_users.py  teams.py  tokens.py  translation_providers.py  translation_status.py  translations.py  webhooks.py
backend/app/services/: __init__.py  gemini_service.py  glossary_aware_translation.py  glossary_processor.py  translation_evaluation_service.py  translation_provider.py
backend/app/services/lokalise/: __init__.py  base.py  comments.py  glossary.py  keys.py  languages.py  projects.py  system.py  translations.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/api/: __init__.py
backend/tests/api/test_glossary_processor/: __init__.py  test_glossary_processor_endpoints.py
backend/tests/api/test_lokalise/: __init__.py  test_files.py  test_glossary.py  test_keys.py  test_languages.py  test_projects.py  test_translations.py
backend/tests/api/test_translation/: __init__.py  test_translation_endpoints.py
backend/tests/utils/: __init__.py  test_parity.py
(+32 files in other folders)
